# cmake-ios-rpath-example

./: .gitmodules  CMakeLists.txt  README.md  apple_codesign.sh  lib.h  lib.m  main.m  main_other.m
cmake/: MyHelpers.cmake
external_lib/: CMakeLists.txt  extlib.m
external_lib/install/include/: extlib.h
external_lib/install/lib/: libextlib.dylib
